# github-setup-demo

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  adr-template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  spike.yml  story.yml  tech-debt.yml
.github/workflows/: pr-checks.yml  spec-lint.yml  spec-pr-from-story.yml  stale-issues.yml
docs/: AGENTIC_TEAM_INTEGRATION.md  BACKLOG_AND_PRIORITIZATION.md  DEFINITION_OF_DONE.md  GXP_UPGRADE_PATH.md  HOTFIX_AND_BUGS.md  ONBOARDING.md  RELEASE_AND_DEPLOY.md  REVIEW_AS_ADVERSARY.md  SPRINT_PROCESS.md  WORKFLOW.md
docs/postmortems/: 2026-06-13-cache-tz-bug.md
specs/: F-CORE-001-show-weather.md  F-CORE-002-cache-readings.md  F-CORE-003-providers-fallback.md  F-CORE-016-show-5-day-forecast-for-a-city.md  F-CORE-019-add-wind-to-weather-forecast.md  _template.md  index.md
src/weatherbot/: __init__.py  cache.py  chain.py  cli.py  providers.py
tests/: test_cache_sc_002.py  test_chain_sc_003.py  test_show_sc_001.py
